# CLI_Reminder

./: .gitignore  LICENSE  README.md  setup.sh
remind_rs/: Cargo.toml
remind_rs/src/: cli.rs  main.rs  reminder.rs  utils.rs
remindme/: Cargo.toml
remindme/src/: cli.rs  main.rs  notification.rs  reminder.rs  sound.rs  storage.rs  tui.rs
