[package]
name = "remindme"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
notify-rust = "4.11.7"
ratatui = "0.29.0"
rodio = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
